crates/ars-components/src/overlay/alert_dialog/snapshots/ars_components__overlay__alert_dialog__tests__alert_dialog_title_clamped_above_six.snap
---
source: crates/ars-components/src/overlay/alert_dialog/mod.rs
expression: "snapshot_attrs(&fresh_service(Props\n{ title_level: 10, ..test_props() }).connect(&|_| {}).title_attrs(),)"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-heading-level",
            ),
            String(
                "6",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "title",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "alert-dialog",
            ),
        ),
        (
            Id,
            String(
                "alert-title",
            ),
        ),
    ],
    styles: [],
}
